--- a/admin-draw.html
+++ b/admin-draw.html
@@ -1,41 +1,206 @@
 <!doctype html>
 <html lang="uk">
 <head>
-<meta charset="utf-8">
-<title>STOLAR CARP • Жеребкування</title>
-<link rel="stylesheet" href="assets/css/main.css">
+  <meta charset="utf-8">
+  <title>STOLAR CARP • Жеребкування</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="assets/css/main.css">
+
+  <style>
+    body { background:#020617; }
+    .wrap { max-width:900px; margin:0 auto; padding:20px 0 80px; }
+    .card {
+      background:rgba(15,23,42,.9);
+      border:1px solid rgba(148,163,184,.3);
+      border-radius:16px;
+      padding:16px;
+      margin-bottom:12px;
+    }
+    .row {
+      display:grid;
+      grid-template-columns: 1fr 140px 120px;
+      gap:10px;
+      align-items:center;
+    }
+    select {
+      width:100%;
+      padding:8px;
+      border-radius:10px;
+      background:#020617;
+      color:#e5e7eb;
+      border:1px solid rgba(148,163,184,.3);
+    }
+    .btn { margin-top:16px; }
+    .muted { color:#9ca3af; font-size:.85rem; }
+  </style>
 </head>
 
 <body>
+
 <header class="header">
   <div class="container header__row">
-    <div class="logo">
+    <a class="logo" href="admin.html">
       <span class="logo__mark">SC</span>
       <span class="logo__text">STOLAR CARP</span>
-    </div>
+    </a>
   </div>
 </header>
 
-<main class="main container">
+<main class="main">
+  <section class="section container wrap">
 
-  <h2>🎣 Жеребкування</h2>
+    <h2>🎣 Жеребкування</h2>
 
-  <div class="card">
-    <label>Змагання / Етап</label>
-    <select id="stageSelect"></select>
-  </div>
+    <div class="card">
+      <div class="muted">Змагання / етап</div>
+      <select id="stageSelect"></select>
+    </div>
 
-  <div id="teamsWrap" class="card" style="margin-top:16px"></div>
+    <div id="drawList"></div>
 
-  <button class="btn btn--accent" id="saveDraw" style="margin-top:16px">
-    💾 Зберегти жеребкування
-  </button>
+    <button class="btn btn--accent" id="saveBtn">
+      Зберегти жеребкування
+    </button>
 
+    <div id="msg" class="muted" style="margin-top:10px;"></div>
+
+  </section>
 </main>
 
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 <script src="assets/js/firebase-init.js"></script>
-<script src="assets/js/admin-draw.js"></script>
+
+<script>
+(async function () {
+  const db = window.scDb;
+
+  const stageSelect = document.getElementById("stageSelect");
+  const drawList = document.getElementById("drawList");
+  const msg = document.getElementById("msg");
+
+  const SECTORS = [];
+  ["A","B","C"].forEach(z=>{
+    for(let i=1;i<=8;i++) SECTORS.push(`${z}${i}`);
+  });
+
+  let currentItems = [];
+
+  // ---------- load stages ----------
+  const compSnap = await db.collection("competitions").get();
+  compSnap.forEach(doc=>{
+    const c = doc.data();
+    (c.events||[]).forEach(ev=>{
+      const key = `${doc.id}||${ev.key}`;
+      const label = `${c.name} — ${ev.key}`;
+      const opt = document.createElement("option");
+      opt.value = key;
+      opt.textContent = label;
+      stageSelect.appendChild(opt);
+    });
+  });
+
+  stageSelect.addEventListener("change", loadTeams);
+  loadTeams();
+
+  // ---------- load paid teams ----------
+  async function loadTeams(){
+    drawList.innerHTML = "";
+    msg.textContent = "";
+
+    const [competitionId, stageId] = stageSelect.value.split("||");
+
+    const snap = await db.collection("registrations")
+      .where("competitionId","==",competitionId)
+      .where("stageId","==",stageId)
+      .where("status","==","paid")
+      .get();
+
+    currentItems = [];
+
+    snap.forEach(doc=>{
+      currentItems.push({ id: doc.id, ...doc.data(), sector:"", big:false });
+    });
+
+    render();
+  }
+
+  function render(){
+    drawList.innerHTML = "";
+    currentItems.forEach((t, idx)=>{
+      const card = document.createElement("div");
+      card.className = "card";
+
+      card.innerHTML = `
+        <div class="row">
+          <div><b>${t.teamName}</b></div>
+
+          <select data-sector="${idx}">
+            <option value="">—</option>
+            ${SECTORS.map(s=>`<option>${s}</option>`).join("")}
+          </select>
+
+          <select data-big="${idx}">
+            <option value="no">ні</option>
+            <option value="yes">так</option>
+          </select>
+        </div>
+      `;
+
+      drawList.appendChild(card);
+    });
+
+    drawList.querySelectorAll("select").forEach(sel=>{
+      sel.addEventListener("change", onChange);
+    });
+  }
+
+  function onChange(){
+    const used = new Set();
+    drawList.querySelectorAll("[data-sector]").forEach(s=>{
+      if(s.value){
+        if(used.has(s.value)){
+          alert("❌ Сектор вже зайнятий!");
+          s.value = "";
+        }
+        used.add(s.value);
+      }
+    });
+  }
+
+  // ---------- save ----------
+  document.getElementById("saveBtn").onclick = async ()=>{
+    const [competitionId, stageId] = stageSelect.value.split("||");
+
+    const rows = [];
+    drawList.querySelectorAll(".card").forEach((card,i)=>{
+      const sector = card.querySelector("[data-sector]").value;
+      if(!sector) return;
+
+      rows.push({
+        teamId: currentItems[i].teamId,
+        teamName: currentItems[i].teamName,
+        sector,
+        bigFishTotal: card.querySelector("[data-big]").value === "yes"
+      });
+    });
+
+    await db.collection("draws")
+      .doc(`${competitionId}_${stageId}`)
+      .set({
+        competitionId,
+        stageId,
+        rows,
+        updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+      });
+
+    msg.textContent = "✅ Жеребкування збережено";
+  };
+})();
+</script>
+
 </body>
 </html>
